test_regress/t/t_stream_unpack_lhs.out
%Error-UNSUPPORTED: t/t_stream_unpack_lhs.v:113:38: Unsupported/Illegal: Assignment pattern member not underneath a supported construct: NEQ
                                                  : ... note: In instance 't'
  113 |             if (unpacked_siz_dout != '{8'h01, 8'h23, 8'h45, 8'h67}) $stop;
      |                                      ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_stream_unpack_lhs.v:114:38: Unsupported/Illegal: Assignment pattern member not underneath a supported construct: NEQ
                                                  : ... note: In instance 't'
  114 |             if (unpacked_asc_dout != '{8'h01, 8'h23, 8'h45, 8'h67}) $stop;
      |                                      ^~
%Error-UNSUPPORTED: t/t_stream_unpack_lhs.v:115:38: Unsupported/Illegal: Assignment pattern member not underneath a supported construct: NEQ
                                                  : ... note: In instance 't'
  115 |             if (unpacked_des_dout != '{8'h76, 8'h54, 8'h32, 8'h10}) $stop;
      |                                      ^~
%Error-UNSUPPORTED: t/t_stream_unpack_lhs.v:117:36: Unsupported/Illegal: Assignment pattern member not underneath a supported construct: NEQ
                                                  : ... note: In instance 't'
  117 |             if (packed_siz_dout != '{8'h01, 8'h23, 8'h45, 8'h67}) $stop;
      |                                    ^~
%Error: Internal Error: t/t_stream_unpack_lhs.v:117:33: ../V3Width.cpp:#: Node has no type
                                                      : ... note: In instance 't'
  117 |             if (packed_siz_dout != '{8'h01, 8'h23, 8'h45, 8'h67}) $stop;
      |                                 ^~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
